course/kubernetes/labs/04-Deployments/04.9-deployment-strategies/03-blue-green/multiple-services/ingress-v1.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-app
  labels:
    app: my-app
spec:
  ingressClassName: nginx
  rules:
    - host: a.domain.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: my-app-a-v1
                port:
                  number: 80
    - host: b.domain.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: my-app-b-v1
                port:
                  number: 80
